--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <h1>Steve Leahy</h1>
+<head><style>
+
+    body {background-color: blue
+    }
+    </style>
+    
 
     <script src="app.js">
     </script>
@@ -15,7 +19,7 @@
 <body>
     <p style="background-image: url('img_Underground Tree.JPEG');">
         <div class="jumbotron text-center">
-            <h1>JavaScript</h1>
+            <h1>Steve Leahy's 'JavaScript Homework Page</h1>
             <p>CNIT 133 Homework Page</p>
         </div>
 
@@ -59,5 +63,5 @@
             </div>
         </div>
 
-</body>
+</bodystyle="background-color:#1c87c9;">
 </html>
